Distancia agregada en la API de Business/Popular
