# models/business.js
@@ -48,16 +48,23 @@ export async function getAllMobile() {
     console.error(error)
   }
 }
-export async function getPopularBusiness() {
+export async function getPopularBusiness({ input }) {
   try{
+    const { latitude, longitude } = input
     const pool = await getConnection()
     let result = await pool.request()
+          .input('LATITUDE', mssql.Float, latitude)
+          .input('LONGITUDE', mssql.Float, longitude)
           .query('SELECT TOP 5 [b].[businessId], ' +
             ' [b].[businessName], [b].[businessAddress], ' +
             ' [b].[businessPhoneNumber], [b].[businessStatus], ' +
             ' [b].[businessLogo], [b].[businessLatitude], ' +
             ' [b].[businessLongitude], AVG(rw.reviewRating) AS businessAverageRating, ' +
-            ' COUNT(rw.reviewsId) AS businessTotalReviews ' +
+            ' COUNT(rw.reviewsId) AS businessTotalReviews, ' +
+            ' CASE WHEN (6371 * ACOS(COS(RADIANS(@LATITUDE)) * COS(RADIANS(b.businessLatitude)) * COS(RADIANS(b.businessLongitude) - RADIANS(@LONGITUDE)) + SIN(RADIANS(@LATITUDE)) * SIN(RADIANS(b.businessLatitude)))) < 1 ' +
+            '   THEN CONCAT(ROUND((6371 * ACOS(COS(RADIANS(@LATITUDE)) * COS(RADIANS(b.businessLatitude)) * COS(RADIANS(b.businessLongitude) - RADIANS(@LONGITUDE)) + SIN(RADIANS(@LATITUDE)) * SIN(RADIANS(b.businessLatitude)))) * 1000, 2), \' m \') ' +
+            '   ELSE CONCAT(ROUND(6371 * ACOS(COS(RADIANS(@LATITUDE)) * COS(RADIANS(b.businessLatitude)) * COS(RADIANS(b.businessLongitude) - RADIANS(@LONGITUDE)) + SIN(RADIANS(@LATITUDE)) * SIN(RADIANS(b.businessLatitude))), 2), \' km \') ' +
+            ' END AS businessDistance ' +
             ' FROM Business b ' +
             ' JOIN Reviews rw ON b.businessId = rw.review_BusinessId ' +
             ' GROUP BY [b].[businessId], [b].[businessName], ' +
